--- a/app/assets/javascripts/polymer/polymer.html
+++ b/app/assets/javascripts/polymer/polymer.html
@@ -7,5 +7,5 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<%= html_import_tag 'polymer/layout' %>
+<link rel="import" href="layout.html" />
 <script src="polymer.js"></script>
